welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.error
Program:6: error: 'while' expected but '}' found.
	}
        ^